<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerSetup"
    android:background="#1DE9B6">

    <TextView
        android:id="@+id/playerSetupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/PlayerSetupTitle"
        android:textColor="#197EAA"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="50dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/tictactoe_anim" />

    <TextView
        android:id="@+id/Player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Lable1"
        android:textColor="#E30B55"
        app:layout_constraintBottom_toTopOf="@+id/Player1Name"
        app:layout_constraintStart_toStartOf="@+id/Player1Name" />

    <EditText
        android:id="@+id/Player1Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/NameHint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerSetupTitle"
        app:layout_constraintVertical_bias="0.135" />

    <TextView
        android:id="@+id/Player2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Lable2"
        android:textColor="#3854F1"
        app:layout_constraintBottom_toTopOf="@+id/Player2Name"
        app:layout_constraintStart_toStartOf="@+id/Player2Name" />

    <EditText
        android:id="@+id/Player2Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/NameHint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Player1Name"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/SubmitBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:background="@drawable/red_button"
        android:onClick="submitButtonClick"
        android:text="@string/SubmitButton"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerSetupTitle" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Mohammad Fahad Alam"
        android:textColor="#8BA5B6"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.807" />
</androidx.constraintlayout.widget.ConstraintLayout>